--- a/package.json
+++ b/package.json
@@ -15,9 +15,18 @@
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/localize": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.1",
+    "@popperjs/core": "^2.10.2",
+    "@syncfusion/ej2-angular-buttons": "^19.4.55",
+    "@syncfusion/ej2-angular-calendars": "^19.4.56",
+    "@syncfusion/ej2-angular-dropdowns": "^19.4.56",
+    "@syncfusion/ej2-angular-schedule": "^19.4.55",
+    "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
